# competitionops-agent

./: .env.example  .gitattributes  .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-engineer.md  pm-analyst.md  security-reviewer.md
.claude/commands/: implement-next.md  review-security.md  test-first.md
docs/: 00_session_recap.md  01_product_requirements.md  02_spec.md  03_architecture.md  04_mcp_setup.md  05_security_oauth.md  06_agile_sdd_tdd_workflow.md  07_backlog.md  08_api_contracts.md  09_research_sources.md  10_p2_roadmap.md
infra/docker/: Dockerfile  docker-compose.yml
infra/k8s/: README.md  deployment.yaml  namespace.yaml  service.yaml
infra/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.template.yaml  service.yaml
infra/k8s/overlays/dev/: deployment-patch.yaml  kustomization.yaml  namespace.yaml
infra/k8s/overlays/prod/: deployment-patch.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
infra/k8s/overlays/staging/: ingress.yaml  kustomization.yaml  namespace.yaml
infra/windmill/: README.md
infra/windmill/flows/: competition_pipeline.yaml
infra/windmill/scripts/: approve_and_execute.py  extract_brief.py  generate_plan.py
scripts/: dev.sh  setup_mcp.sh  verify.sh
src/competitionops/: config.py  main.py  ports.py  runtime.py  schemas.py
src/competitionops/adapters/: _http_errors.py  _path_utils.py  fake.py  file_audit.py  file_plan_store.py  google_calendar.py  google_docs.py  google_drive.py  google_sheets.py  memory_audit.py  memory_plan_store.py  pdf_docling.py  pdf_mock.py  plane.py  registry.py  token_provider_google.py  token_provider_static.py  web_crawl4ai.py  web_mock.py
src/competitionops/security/: __init__.py  source_uri_validator.py
src/competitionops/services/: approval.py  brief_extractor.py  execution.py  planner.py
src/competitionops/telemetry/: __init__.py  decorators.py  metrics.py  setup.py
src/competitionops/workflows/: __init__.py  graph.py  nodes.py  state.py
src/competitionops_mcp/: server.py
tests/: conftest.py  test_adapter_token_refresh_handling.py  test_api_contracts.py  test_approval.py  test_approval_gate.py  test_audit_persistence_integration.py  test_brief_extractor.py  test_calendar_real_adapter.py  test_docs_real_adapter.py  test_drive_ingestion.py  test_drive_real_adapter.py  test_dry_run_contract.py  test_e2e_dry_run.py  test_execution_telemetry.py  test_fake_adapter.py  test_fastapi_telemetry.py  test_file_audit.py  test_file_plan_repository.py  test_google_workspace_adapters.py  test_health.py  test_http_error_redaction.py  test_k8s_manifests.py  test_mcp_telemetry.py  test_mcp_tools.py  test_metrics.py  test_openapi_schema.py  test_otel_resource.py  test_otel_wiring.py  test_pdf_adapter_factory.py  test_pdf_ingestion.py  test_plan_persistence_integration.py  test_plane_adapter.py  test_planner.py  test_pyproject_dependency_groups.py  test_runtime.py  test_secret_settings.py  test_settings_validators.py  test_sheets_real_adapter.py  test_source_uri_security.py  test_telemetry_setup.py  (+5 more)
