[project]
name = "competitionops-agent"
version = "0.1.0"
description = "Google Workspace-native competition PM automation agent for startup teams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/competitionops", "src/competitionops_mcp"]

# Runtime feature extras follow PEP 621 — operators install per-feature
# via ``uv sync --extra <name>`` (or ``pip install .[<name>]``).
[project.optional-dependencies]
google = [
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "google-auth-oauthlib>=1.2.1"
]
langgraph = [
    "langgraph>=0.5.0",
    "langgraph-checkpoint>=2.0.0"
]
otel = [
    "opentelemetry-exporter-otlp>=1.27.0"
]
# P2-005 Sprint 3 — real PDF layout extraction via Docling. Heavy ML
# deps (easyocr → torch, pypdfium2, huggingface-hub) so the default
# install stays light; only operators who set PDF_ADAPTER=docling
# need to run ``uv sync --extra ocr``.
ocr = [
    "docling>=2.0.0"
]

# Dev tooling follows PEP 735 dependency-groups. ``uv sync`` auto-installs
# this group; ``uv sync --no-dev`` opts out (e.g. in production images).
# Replaces the deprecated ``[tool.uv].dev-dependencies`` table that
# every ``uv sync`` / ``uv run`` invocation used to warn about.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "coverage>=7.6.0",
    # Round-3 H1 — workflow runtime. ``tests/test_workflow_graph.py``
    # imports ``langgraph.graph`` eagerly, so the suite needs it
    # installed by the default ``uv sync`` (no flags). Production
    # images that don't want the workflow path can still opt out via
    # ``uv sync --no-dev``. The matching ``[project.optional-dependencies].langgraph``
    # entry below stays for the operator-facing ``pip install .[langgraph]``
    # path; the dev group ensures contributors don't have to know it
    # exists.
    "langgraph>=0.5.0",
    "langgraph-checkpoint>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
